@@ -821,8 +821,8 @@ bounce_element(El, Condition) ->
 	    % This is handled by C2S and S2S send_element functions.
 	    ErrOld = exmpp_xml:xmlel_to_xmlelement(Err,
 	      [?NS_JABBER_CLIENT], ?PREFIXED_NS),
-	    FromOld = exmpp_jid:to_ejabberd_jid(From),
-	    ToOld = exmpp_jid:to_ejabberd_jid(To),
+	    FromOld = jlib:to_old_jid(From),
+	    ToOld = jlib:to_old_jid(To),
 	    ejabberd_router:route(ToOld, FromOld, ErrOld)
     end.
 
